--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.inputsystem": "1.8.1",
     "com.unity.test-framework": "1.4.3",
     "com.unity.timeline": "1.8.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.2",
     "com.unity.modules.accessibility": "1.0.0",
